--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,13 @@ click==8.1.7
 colorama==0.4.6
 contourpy==1.2.1
 cycler==0.12.1
+demoji==1.1.0
 fonttools==4.50.0
 gitdb==4.0.11
 GitPython==3.1.43
 idna==3.6
 Jinja2==3.1.3
+joblib==1.3.2
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
@@ -20,6 +22,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.4
 mdurl==0.1.2
+nltk==3.8.1
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.1
@@ -32,6 +35,7 @@ pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 referencing==0.34.0
+regex==2023.12.25
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.0
@@ -42,6 +46,7 @@ tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.1
 tornado==6.4
+tqdm==4.66.2
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
